Fixed up Transactions.csv and home sceen bug